[tool.poetry]
name = "myproject"
version = "0.1.0"
description = ""
authors = ["Seiya Asahina <seiya@asahina>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"
whitenoise = {extras = ["brotli"], version = "^6.4.0"}
dj-database-url = "^2.0.0"
psycopg2-binary = "^2.9.6"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
